// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Client Client with default requestPolicy should accept a default requestPolicy 1`] = `
Client {
  "activeOperations": Object {},
  "createOperationContext": [Function],
  "createRequestOperation": [Function],
  "dispatchOperation": [Function],
  "executeMutation": [Function],
  "executeQuery": [Function],
  "executeSubscription": [Function],
  "fetch": undefined,
  "fetchOptions": undefined,
  "maskTypename": false,
  "operations$": [Function],
  "preferGetMethod": false,
  "queue": Array [],
  "reexecuteOperation": [Function],
  "requestPolicy": "cache-and-network",
  "results$": [Function],
  "subscribeToDebugTarget": [Function],
  "suspense": false,
  "url": "https://localhost:3000",
}
`;

exports[`Client Client with exchanges provided should instantiate a client with exchanges 1`] = `
Client {
  "activeOperations": Object {},
  "createOperationContext": [Function],
  "createRequestOperation": [Function],
  "dispatchOperation": [Function],
  "executeMutation": [Function],
  "executeQuery": [Function],
  "executeSubscription": [Function],
  "fetch": undefined,
  "fetchOptions": undefined,
  "maskTypename": false,
  "operations$": [Function],
  "preferGetMethod": false,
  "queue": Array [],
  "reexecuteOperation": [Function],
  "requestPolicy": "cache-first",
  "results$": [Function],
  "subscribeToDebugTarget": [Function],
  "suspense": false,
  "url": "https://localhost:3000",
}
`;

exports[`Client Client with fetchOptions provided should instantiate a client instance with fetchOptions provided as FetchFn 1`] = `
Client {
  "activeOperations": Object {},
  "createOperationContext": [Function],
  "createRequestOperation": [Function],
  "dispatchOperation": [Function],
  "executeMutation": [Function],
  "executeQuery": [Function],
  "executeSubscription": [Function],
  "fetch": undefined,
  "fetchOptions": [Function],
  "maskTypename": false,
  "operations$": [Function],
  "preferGetMethod": false,
  "queue": Array [],
  "reexecuteOperation": [Function],
  "requestPolicy": "cache-first",
  "results$": [Function],
  "subscribeToDebugTarget": [Function],
  "suspense": false,
  "url": "https://localhost:3000",
}
`;

exports[`Client Client with fetchOptions provided should instantiate a client instance with fetchOptions provided as FetchOpts 1`] = `
Client {
  "activeOperations": Object {},
  "createOperationContext": [Function],
  "createRequestOperation": [Function],
  "dispatchOperation": [Function],
  "executeMutation": [Function],
  "executeQuery": [Function],
  "executeSubscription": [Function],
  "fetch": undefined,
  "fetchOptions": Object {
    "headers": Object {
      "Content-Type": "application/json",
    },
    "integrity": "",
    "method": "POST",
    "referrerPolicy": "",
  },
  "maskTypename": false,
  "operations$": [Function],
  "preferGetMethod": false,
  "queue": Array [],
  "reexecuteOperation": [Function],
  "requestPolicy": "cache-first",
  "results$": [Function],
  "subscribeToDebugTarget": [Function],
  "suspense": false,
  "url": "https://localhost:3000",
}
`;

exports[`Client Client with only a url provided should instantiate a client instance 1`] = `
Client {
  "activeOperations": Object {},
  "createOperationContext": [Function],
  "createRequestOperation": [Function],
  "dispatchOperation": [Function],
  "executeMutation": [Function],
  "executeQuery": [Function],
  "executeSubscription": [Function],
  "fetch": undefined,
  "fetchOptions": undefined,
  "maskTypename": false,
  "operations$": [Function],
  "preferGetMethod": false,
  "queue": Array [],
  "reexecuteOperation": [Function],
  "requestPolicy": "cache-first",
  "results$": [Function],
  "subscribeToDebugTarget": [Function],
  "suspense": false,
  "url": "https://localhost:3000",
}
`;

exports[`Client Client with suspense flag should accept a suspense flag to enable experimental SSR mode 1`] = `
Client {
  "activeOperations": Object {},
  "createOperationContext": [Function],
  "createRequestOperation": [Function],
  "dispatchOperation": [Function],
  "executeMutation": [Function],
  "executeQuery": [Function],
  "executeSubscription": [Function],
  "fetch": undefined,
  "fetchOptions": undefined,
  "maskTypename": false,
  "operations$": [Function],
  "preferGetMethod": false,
  "queue": Array [],
  "reexecuteOperation": [Function],
  "requestPolicy": "cache-first",
  "results$": [Function],
  "subscribeToDebugTarget": [Function],
  "suspense": true,
  "url": "https://localhost:3000",
}
`;

exports[`Client Ecosystem exchanges should support passing the multipartFetchExchange 1`] = `
Client {
  "activeOperations": Object {},
  "createOperationContext": [Function],
  "createRequestOperation": [Function],
  "dispatchOperation": [Function],
  "executeMutation": [Function],
  "executeQuery": [Function],
  "executeSubscription": [Function],
  "fetch": undefined,
  "fetchOptions": undefined,
  "maskTypename": false,
  "operations$": [Function],
  "preferGetMethod": false,
  "queue": Array [],
  "reexecuteOperation": [Function],
  "requestPolicy": "cache-first",
  "results$": [Function],
  "subscribeToDebugTarget": [Function],
  "suspense": false,
  "url": "https://localhost:3000",
}
`;

exports[`Client ssrExchange should exist and be callable 1`] = `[Function]`;

exports[`Client with custom fetch implementation should accept a custom fetch implementation 1`] = `
Client {
  "activeOperations": Object {},
  "createOperationContext": [Function],
  "createRequestOperation": [Function],
  "dispatchOperation": [Function],
  "executeMutation": [Function],
  "executeQuery": [Function],
  "executeSubscription": [Function],
  "fetch": [Function],
  "fetchOptions": undefined,
  "maskTypename": false,
  "operations$": [Function],
  "preferGetMethod": false,
  "queue": Array [],
  "reexecuteOperation": [Function],
  "requestPolicy": "cache-first",
  "results$": [Function],
  "subscribeToDebugTarget": [Function],
  "suspense": false,
  "url": "http://localhost:3000",
}
`;

exports[`Client with custom fetch implementation should work with a fetcher using Fetch.request 1`] = `
Client {
  "activeOperations": Object {},
  "createOperationContext": [Function],
  "createRequestOperation": [Function],
  "dispatchOperation": [Function],
  "executeMutation": [Function],
  "executeQuery": [Function],
  "executeSubscription": [Function],
  "fetch": [Function],
  "fetchOptions": undefined,
  "maskTypename": false,
  "operations$": [Function],
  "preferGetMethod": false,
  "queue": Array [],
  "reexecuteOperation": [Function],
  "requestPolicy": "cache-first",
  "results$": [Function],
  "subscribeToDebugTarget": [Function],
  "suspense": false,
  "url": "http://localhost:3000",
}
`;

exports[`Client with maskTypename respects the maskTypename flag 1`] = `
Client {
  "activeOperations": Object {},
  "createOperationContext": [Function],
  "createRequestOperation": [Function],
  "dispatchOperation": [Function],
  "executeMutation": [Function],
  "executeQuery": [Function],
  "executeSubscription": [Function],
  "fetch": undefined,
  "fetchOptions": undefined,
  "maskTypename": true,
  "operations$": [Function],
  "preferGetMethod": false,
  "queue": Array [],
  "reexecuteOperation": [Function],
  "requestPolicy": "cache-first",
  "results$": [Function],
  "subscribeToDebugTarget": [Function],
  "suspense": false,
  "url": "https://localhost:3000",
}
`;

exports[`Client with preferGetMethod respects the preferGetMethod flag 1`] = `
Client {
  "activeOperations": Object {},
  "createOperationContext": [Function],
  "createRequestOperation": [Function],
  "dispatchOperation": [Function],
  "executeMutation": [Function],
  "executeQuery": [Function],
  "executeSubscription": [Function],
  "fetch": undefined,
  "fetchOptions": undefined,
  "maskTypename": false,
  "operations$": [Function],
  "preferGetMethod": true,
  "queue": Array [],
  "reexecuteOperation": [Function],
  "requestPolicy": "cache-first",
  "results$": [Function],
  "subscribeToDebugTarget": [Function],
  "suspense": false,
  "url": "https://localhost:3000",
}
`;
